--- a/cp10/WebRoot/WEB-INF/web.xml
+++ b/cp10/WebRoot/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<web-app>
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
 	<servlet>
 		<servlet-name>register</servlet-name>
@@ -62,16 +65,27 @@
 		<servlet-name>exit</servlet-name>
 		<servlet-class>myservlet.control.HandleExit</servlet-class>
 	</servlet>
+	<servlet>
+		<description>uploadServlet</description>
+		<display-name>uploadServlet</display-name>
+		<servlet-name>MultiUpload</servlet-name>
+		<servlet-class>myservlet.control.MultiUpload</servlet-class>
+		<multipart-config>
+			<location>D:/j2ee-homework/cp10/WebRoot/images/</location>
+		</multipart-config>
+	</servlet>
+
 
 	<servlet-mapping>
 		<servlet-name>exit</servlet-name>
 		<url-pattern>/helpExitLogin</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>MultiUpload</servlet-name>
+		<url-pattern>/multiUpload</url-pattern>
+	</servlet-mapping>
 
-<!-- 	<resource-ref>
-		<description>DB Connection</description>
-		<res-ref-name>jdbc/mysql</res-ref-name>
-		<res-type>javax.sql.DataSource</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref> -->
+	<!-- <resource-ref> <description>DB Connection</description> <res-ref-name>jdbc/mysql</res-ref-name> 
+		<res-type>javax.sql.DataSource</res-type> <res-auth>Container</res-auth> 
+		</resource-ref> -->
 </web-app> 
